<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tv_body_1"
            android:text="@string/text_example"
            android:textSize="15sp"
             />
        <TextView
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/first_msg_bmr"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tv_body_2"
            android:text="@string/text_example"
            android:textSize="15sp" />
        <TextView
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/first_msg_calories_needed"
            android:textStyle="bold"
            android:textSize="15sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_close_dialog"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_btn_close" />


</LinearLayout>